--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "description": "Redis Session Management Monorepo",
   "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
   "scripts": {
-    "dev": "pnpm --parallel --filter \"./packages/*\" dev",
-    "dev:fe": "pnpm --filter redis-session-fe dev",
-    "dev:be": "pnpm --filter redis-session-be start:dev",
-    "build": "pnpm --filter \"./packages/*\" build",
-    "build:fe": "pnpm --filter redis-session-fe build",
-    "build:be": "pnpm --filter redis-session-be build",
-    "start:fe": "pnpm --filter redis-session-fe start",
-    "start:be": "pnpm --filter redis-session-be start:prod",
-    "lint": "pnpm --filter \"./packages/*\" lint",
-    "test": "pnpm --filter \"./packages/*\" test",
-    "clean": "pnpm --filter \"./packages/*\" exec rm -rf node_modules && rm -rf node_modules"
+    "dev": "turbo run dev start:dev --parallel",
+    "dev:fe": "turbo run dev --filter=redis-session-fe",
+    "dev:be": "turbo run start:dev --filter=redis-session-be",
+    "build": "turbo run build",
+    "build:fe": "turbo run build --filter=redis-session-fe",
+    "build:be": "turbo run build --filter=redis-session-be",
+    "start:fe": "turbo run start --filter=redis-session-fe",
+    "start:be": "turbo run start:prod --filter=redis-session-be",
+    "lint": "turbo run lint",
+    "test": "turbo run test",
+    "test:e2e": "turbo run test:e2e",
+    "format": "turbo run format",
+    "clean": "turbo run clean && rm -rf node_modules"
+  },
+  "devDependencies": {
+    "turbo": "^2.6.1"
   }
 }
-
