--- a/packages/redis-session-fe/package.json
+++ b/packages/redis-session-fe/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "clean": "rm -rf .next node_modules"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
