--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Redis Session Management Monorepo",
   "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
   "scripts": {
-    "dev": "turbo run dev start:dev --parallel",
+    "dev": "turbo run dev --parallel",
     "dev:fe": "turbo run dev --filter=redis-session-fe",
-    "dev:be": "turbo run start:dev --filter=redis-session-be",
+    "dev:be": "turbo run dev --filter=redis-session-be",
     "build": "turbo run build",
     "build:fe": "turbo run build --filter=redis-session-fe",
     "build:be": "turbo run build --filter=redis-session-be",
