세션 구현 완료

--- a/packages/redis-session-be/.env.example
+++ b/packages/redis-session-be/.env.example
@@ -1,9 +1,15 @@
-# Server Port
+# 서버 설정
 PORT=3001
+NODE_ENV=development
 
-# Redis Configuration
+# Redis 설정
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
 
-# Session Secret
-SESSION_SECRET=your-secret-key-here
+# 세션 설정
+SESSION_SECRET=your-secret-key-change-in-production
+
+# 프론트엔드 URL (CORS)
+FRONTEND_URL=http://localhost:3000
